--- a/Traders Mobile/app/src/main/AndroidManifest.xml
+++ b/Traders Mobile/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name=".Activities.MainActivityCustomer" />
         <activity android:name=".Activities.ProfileActivity" />
-        <activity android:name=".Activities.NewListingActivity"></activity>
+        <activity android:name=".Activities.NewListingActivity" />
+        <activity android:name=".Activities.SubCategoriesActivity"></activity>
     </application>
 
 </manifest>
