--- a/Traders Mobile/app/src/main/AndroidManifest.xml
+++ b/Traders Mobile/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".Activities.MainActivityCustomer" />
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.NewListingActivity" />
-        <activity android:name=".Activities.SubCategoriesActivity"></activity>
+        <activity android:name=".Activities.SubcategoryActivity"></activity>
     </application>
 
 </manifest>
