Added Listing screen and Item info to be able to redirect to from the listing screen, which also can lead to the dealers profile.

--- a/Traders Mobile/app/src/main/AndroidManifest.xml
+++ b/Traders Mobile/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity android:name=".Activities.MainActivityCustomer" />
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.NewListingActivity" />
-        <activity android:name=".Activities.SubcategoryActivity"></activity>
+        <activity android:name=".Activities.SubcategoryActivity" />
+        <activity android:name=".Activities.ItemInfoActivity" />
+        <activity android:name=".Activities.ItemListingActivity"></activity>
     </application>
 
 </manifest>
