--- a/Traders Mobile/app/src/main/AndroidManifest.xml
+++ b/Traders Mobile/app/src/main/AndroidManifest.xml
@@ -24,9 +24,10 @@
         <activity android:name=".Activities.MainActivityCustomer" />
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.NewListingActivity" />
-        <activity android:name=".Activities.SubcategoryActivity" />
+        <activity android:name=".Activities.SubCategoriesActivity" />
         <activity android:name=".Activities.ItemInfoActivity" />
-        <activity android:name=".Activities.ItemListingActivity"></activity>
+        <activity android:name=".Activities.ItemListingActivity" />
+        <activity android:name=".Activities.RedirectActivity"></activity>
     </application>
 
 </manifest>
